membicsys/docroot/css/site.css
/* ... */
.fpinrevdiv { background-image: url('../img/bleachscrub.png');
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px; }
.fpmeminrevdiv { background-color:#ffbe74; }
.fpbodydiv { overflow:auto; padding:0px 3px 3px 3px; }
.fprevpicdiv { float:left; padding:0px 10px 0px 3px; }
.fpbuttonsdiv { margin-left:40px; padding-top:2px; }
.fpbuttondiv { display:inline-block; margin:0px 10px; min-width:40px; 
   text-align:center; }
.fpotherrevsdiv { display:inline-block; }
.fpbuttonimg { max-height:40px; max-width:40px; vertical-align:middle; }
.fpotherrevsdiv { }
.fptitlediv { display:inline-block; padding:0px 10px 0px 5px; }
.fpstarsdiv { display:inline-block; }
.fpsecfieldsdiv { margin-left:35px; /* reviewbadge + fptitlediv */
  font-size:x-small; }
.fpdatediv { margin-left:5px; font-size: xx-small; }
.fpdcontdiv { position:relative; }
.fpqoverdiv { position:absolute; top:0px; left:140px; font-style:italic; }
.fpdescrdiv, .fpdescrfadediv, .fpkeywrdsdiv, .fpctmsdiv { 
  font-size:small; padding: 2px 10px 0px 2px;
  font-family:"Open Sans", "Verdana", "Arial", "Helvetica", sans-serif; }
.fpdescrfadediv { opacity:0.2; }
.fpctmlinkslab { font-style:italic; }
.fpkeywrdsdiv { font-style:italic; }
.fpjumpdiv { display:inline-block; padding: 0px 0px 0px 5px; }
.togglemoretextspan { background:#ccc; }
.fpinlinetextdiv { font-size:small; }
#preflist { list-style:none; padding:0px 0px 0px 4px; margin:0; }
.visprefimg { width:24px; height:24px; margin:0px 4px; }
.visprefimgprof { width:30px; height:30px; margin:0px 4px 0px 10px; }
.visprefnamespan { font-weight:bold; font-size:small; }
.visprefdescrspan { padding-left:5px; font-size:small; }
.visprefsuppdiv { padding-left:30px; font-size:small; }
.themesdiv { }
.themetilewrapper, .proftilewrapper { display:inline-block; 
  margin:5px; padding:5px; border:1px solid #ccc;
  background:#fff; vertical-align:top; }
.themetilewrapper { box-shadow:5px 5px 3px #333; border-radius:10px; }
.proftilewrapper { box-shadow:5px 5px 3px #888888; border-radius:5px; }
.themetile, .proftile { margin:auto; }
.themetilepicdiv { max-width:125px; max-height:125px; }
.proftilepicdiv { max-width:60px; max-height:60px; }
.themetiletitlediv, .proftiletitlediv { text-align:center;
  font-family:"Shadows Into Light Two", cursive; }
.themetiletitlediv { max-width:125px; }
.proftiletitlediv { max-width:80px; font-size:small; }
.themetilecountdiv { display:none; text-align:center; font-size:x-small; }
#membicliststatusdiv { background:#e6e7e9; opacity:0.8; border-radius:10px; }

/* >> docs layout */
.superscript { vertical-align:super; font-size:50%; line-height:normal; }
.quotediv { font-size:small; padding:0px 0px 5px 5px; font-style:italic; }
.aboutcontentdiv { text-align:center; }
#aboutoverviewdiv { padding:5px; font-size:large; text-align:left;
  display:inline-block; min-width:280px; /* small phone */
  background-image:url('../img/e6e7e9p80.png');
  border:10px solid #ffbe74; border-radius:10px; }
.aboutdetailsheading { font-size:medium; font-weight:normal; font-style:italic; }
#d3ckitdiv { position:relative; background-color:#fff; opacity:0.8; }
#freedetdiv { font-size:medium; font-weight:normal; font-style:normal; }
.aboutstatementsdiv, .aboutenddiv { margin:10px auto;
  padding:0px 10px; font-size:small; text-align:left;
  background-image:url('../img/e6e7e9p80.png'); border-radius:10px; }
.aboutstatementsdiv { display:inline-block; }
.aboutenddiv { max-width:420px; }
.arrowul { margin:0px 0px 0px 4px; padding:0px 0px 0px 20px; 
  list-style-image: url('../img/arrow12right.png'); }
.arrowul li { font-size:medium; margin:10px 0px 0px 0px;
  padding:0px 0px 0px 5px;
  background:#e6e7e9; opacity:0.8; border-radius:10px; }
.nobulletul { list-style:none; margin:0px 4px; padding:0px 10px 2px; 10px; }
.nobulletul li { font-size:medium; margin:8px 0px;
  padding:0px 0px 0px 5px;
  background:#e6e7e9; opacity:0.8; border-radius:10px; }
.toplinediv { padding:5px 0px 0px 0px; }
#aboutbottomdiv { font-size:xx-small; text-align:center; word-spacing:30px;
  padding:0; max-width:420px; margin:auto; }
.slidestextspan { font-size:small; display:none; }
.decktextdiv { background-image: url('../img/bleachscrub.png');
  padding:5px; margin:10px; height:213px; overflow:scroll; 
  font-size:medium; }
.decktextdiv ol { margin:0px; padding:0px 0px 0px 20px; }
.decktextdiv ol li { margin:0px; padding:2px 2px 0px 0px; }
.decktextdiv ul { margin:0px; padding:0px 0px 0px 20px; }
.decktextdiv ul li { margin:0px; padding:5px 2px 0px 5px; }
.decktextdiv p { margin:0px; padding:10px 0px 0px 0px; }
.aboutfeaturespan { font-weight:bold; }
#aboutfeaturesdiv, #aboutfaqdiv {}
.aboutdetaildiv { display:none; padding:5px 0px; }
#aboutcoopsdiv { display:none; padding:5px 0px; }
.intxtico { width:18px; height:18px; }
.howtocontentdiv { padding:10px; font-size:medium; }
.tocdiv ul { margin:0px 0px 0px 4px; padding:0px 0px 0px 20px; 
  list-style-image: url('../img/arrow12right.png'); }
.tocdiv ul li { font-size:medium; padding:10px 0px 0px 0px; }
.detailheadingspan {}
.detailcontentdiv { font-size:small; padding: 10px; display:none; }
.defcontentsdiv { display:table; margin:auto; padding:20px; }
.defcontentinnerdiv { border:5px solid black; padding:20px; }
.defsyllabicdiv { font-weight:bold; }
.defpartofspeachdiv { font-style:italic; font-size:medium; padding:5px; }

.hthimg { width:30px; height:30px; vertical-align:middle; }
.ilximg { max-width:25px; max-height:25px; vertical-align:middle; }
.itximg { max-width:20px; max-height:20px; vertical-align:middle; }
.isximg { max-width:15px; max-height:15px; vertical-align:middle; }
.lititlespan { font-weight:bold; font-style:oblique; }

.rectbb { fill:#ffd2a4; stroke:#271400; cursor:pointer; }
.rectbt { cursor:pointer; }

.waitdiv { background:#e6e7e9; opacity:0.8; border-radius:10px; }


/* >> stats page layout */
.statsecdiv { font-size:small; margin:20px 0px 0px 20px; }
.statseclist { font-size:medium; margin:0px; }
/* ... */

